// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generate command get components variables SpongeBob formats variables correctly 1`] = `
Object {
  "componentName": "SpongeBob",
  "componentTagName": "sponge-bob",
  "fileName": "SpongeBob",
  "groupName": "sponge-bob",
}
`;

exports[`Generate command get components variables sponge_bob formats variables correctly 1`] = `
Object {
  "componentName": "SpongeBob",
  "componentTagName": "sponge-bob",
  "fileName": "sponge_bob",
  "groupName": "sponge-bob",
}
`;

exports[`Generate command get components variables sponge-bob formats variables correctly 1`] = `
Object {
  "componentName": "SpongeBob",
  "componentTagName": "sponge-bob",
  "fileName": "sponge-bob",
  "groupName": "sponge-bob",
}
`;

exports[`Generate command get components variables spongeBob formats variables correctly 1`] = `
Object {
  "componentName": "SpongeBob",
  "componentTagName": "sponge-bob",
  "fileName": "spongeBob",
  "groupName": "sponge-bob",
}
`;

exports[`Generate command get components variables spongebob formats variables correctly 1`] = `
Object {
  "componentName": "Spongebob",
  "componentTagName": "spongebob",
  "fileName": "spongebob",
  "groupName": "spongebob",
}
`;

exports[`Generate command get intents variables apiKey FetchData SpongeBob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(context: TapiKeyContext, params: any, body: any, callback: TFetchDataCallback) {
    //... your code goes here
    // use the client defined in client.ts to fetch real object like that:
    // Client(context.authAccess.apiKey).get('/people')
    //   .then(({ data }) => {
    //     callback({ data })
    //   })
    //   .catch((error) => {
    //     callback({ error: error.toString() })
    //   })
    callback({ data: []})
  }
  ",
  "authType": "apiKey",
  "callbackType": "TFetchDataCallback",
  "fileName": "SpongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "SpongeBob",
  "intentType": "FetchData",
}
`;

exports[`Generate command get intents variables apiKey FetchData sponge_bob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(context: TapiKeyContext, params: any, body: any, callback: TFetchDataCallback) {
    //... your code goes here
    // use the client defined in client.ts to fetch real object like that:
    // Client(context.authAccess.apiKey).get('/people')
    //   .then(({ data }) => {
    //     callback({ data })
    //   })
    //   .catch((error) => {
    //     callback({ error: error.toString() })
    //   })
    callback({ data: []})
  }
  ",
  "authType": "apiKey",
  "callbackType": "TFetchDataCallback",
  "fileName": "sponge_bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge_bob",
  "intentType": "FetchData",
}
`;

exports[`Generate command get intents variables apiKey FetchData sponge-bob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(context: TapiKeyContext, params: any, body: any, callback: TFetchDataCallback) {
    //... your code goes here
    // use the client defined in client.ts to fetch real object like that:
    // Client(context.authAccess.apiKey).get('/people')
    //   .then(({ data }) => {
    //     callback({ data })
    //   })
    //   .catch((error) => {
    //     callback({ error: error.toString() })
    //   })
    callback({ data: []})
  }
  ",
  "authType": "apiKey",
  "callbackType": "TFetchDataCallback",
  "fileName": "sponge-bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge-bob",
  "intentType": "FetchData",
}
`;

exports[`Generate command get intents variables apiKey FetchData spongeBob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(context: TapiKeyContext, params: any, body: any, callback: TFetchDataCallback) {
    //... your code goes here
    // use the client defined in client.ts to fetch real object like that:
    // Client(context.authAccess.apiKey).get('/people')
    //   .then(({ data }) => {
    //     callback({ data })
    //   })
    //   .catch((error) => {
    //     callback({ error: error.toString() })
    //   })
    callback({ data: []})
  }
  ",
  "authType": "apiKey",
  "callbackType": "TFetchDataCallback",
  "fileName": "spongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "spongeBob",
  "intentType": "FetchData",
}
`;

exports[`Generate command get intents variables apiKey FetchData spongebob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(context: TapiKeyContext, params: any, body: any, callback: TFetchDataCallback) {
    //... your code goes here
    // use the client defined in client.ts to fetch real object like that:
    // Client(context.authAccess.apiKey).get('/people')
    //   .then(({ data }) => {
    //     callback({ data })
    //   })
    //   .catch((error) => {
    //     callback({ error: error.toString() })
    //   })
    callback({ data: []})
  }
  ",
  "authType": "apiKey",
  "callbackType": "TFetchDataCallback",
  "fileName": "spongebob",
  "intentClassName": "Spongebob",
  "intentName": "spongebob",
  "intentType": "FetchData",
}
`;

exports[`Generate command get intents variables apiKey Intent SpongeBob formats variables correctly 1`] = `
Object {
  "actionExample": undefined,
  "authType": "apiKey",
  "callbackType": "TIntentCallback",
  "fileName": "SpongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "SpongeBob",
  "intentType": "Intent",
}
`;

exports[`Generate command get intents variables apiKey Intent sponge_bob formats variables correctly 1`] = `
Object {
  "actionExample": undefined,
  "authType": "apiKey",
  "callbackType": "TIntentCallback",
  "fileName": "sponge_bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge_bob",
  "intentType": "Intent",
}
`;

exports[`Generate command get intents variables apiKey Intent sponge-bob formats variables correctly 1`] = `
Object {
  "actionExample": undefined,
  "authType": "apiKey",
  "callbackType": "TIntentCallback",
  "fileName": "sponge-bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge-bob",
  "intentType": "Intent",
}
`;

exports[`Generate command get intents variables apiKey Intent spongeBob formats variables correctly 1`] = `
Object {
  "actionExample": undefined,
  "authType": "apiKey",
  "callbackType": "TIntentCallback",
  "fileName": "spongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "spongeBob",
  "intentType": "Intent",
}
`;

exports[`Generate command get intents variables apiKey Intent spongebob formats variables correctly 1`] = `
Object {
  "actionExample": undefined,
  "authType": "apiKey",
  "callbackType": "TIntentCallback",
  "fileName": "spongebob",
  "intentClassName": "Spongebob",
  "intentName": "spongebob",
  "intentType": "Intent",
}
`;

exports[`Generate command get intents variables apiKey RetrieveState SpongeBob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(_context: TapiKeyContext, _params: any, state, callback: TRetrieveStateCallback) {
    callback({ data: state })
  }
  ",
  "authType": "apiKey",
  "callbackType": "TRetrieveStateCallback",
  "fileName": "SpongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "SpongeBob",
  "intentType": "RetrieveState",
}
`;

exports[`Generate command get intents variables apiKey RetrieveState sponge_bob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(_context: TapiKeyContext, _params: any, state, callback: TRetrieveStateCallback) {
    callback({ data: state })
  }
  ",
  "authType": "apiKey",
  "callbackType": "TRetrieveStateCallback",
  "fileName": "sponge_bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge_bob",
  "intentType": "RetrieveState",
}
`;

exports[`Generate command get intents variables apiKey RetrieveState sponge-bob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(_context: TapiKeyContext, _params: any, state, callback: TRetrieveStateCallback) {
    callback({ data: state })
  }
  ",
  "authType": "apiKey",
  "callbackType": "TRetrieveStateCallback",
  "fileName": "sponge-bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge-bob",
  "intentType": "RetrieveState",
}
`;

exports[`Generate command get intents variables apiKey RetrieveState spongeBob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(_context: TapiKeyContext, _params: any, state, callback: TRetrieveStateCallback) {
    callback({ data: state })
  }
  ",
  "authType": "apiKey",
  "callbackType": "TRetrieveStateCallback",
  "fileName": "spongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "spongeBob",
  "intentType": "RetrieveState",
}
`;

exports[`Generate command get intents variables apiKey RetrieveState spongebob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(_context: TapiKeyContext, _params: any, state, callback: TRetrieveStateCallback) {
    callback({ data: state })
  }
  ",
  "authType": "apiKey",
  "callbackType": "TRetrieveStateCallback",
  "fileName": "spongebob",
  "intentClassName": "Spongebob",
  "intentName": "spongebob",
  "intentType": "RetrieveState",
}
`;

exports[`Generate command get intents variables apiKey SaveState SpongeBob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(
    _context: TapiKeyContext,
    _params: any,
    body: any,
    state: any,
    callback: TSaveStateCallback
  ): void {
    const { item: { name } } = body
    const { items = [] }: any = state
    const newItem: any = { name }

    callback({
      state: {
        ...state,
        items: [...items, newItem]
      },
      data: [...items, newItem]
    })
  }
  ",
  "authType": "apiKey",
  "callbackType": "TSaveStateCallback",
  "fileName": "SpongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "SpongeBob",
  "intentType": "SaveState",
}
`;

exports[`Generate command get intents variables apiKey SaveState sponge_bob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(
    _context: TapiKeyContext,
    _params: any,
    body: any,
    state: any,
    callback: TSaveStateCallback
  ): void {
    const { item: { name } } = body
    const { items = [] }: any = state
    const newItem: any = { name }

    callback({
      state: {
        ...state,
        items: [...items, newItem]
      },
      data: [...items, newItem]
    })
  }
  ",
  "authType": "apiKey",
  "callbackType": "TSaveStateCallback",
  "fileName": "sponge_bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge_bob",
  "intentType": "SaveState",
}
`;

exports[`Generate command get intents variables apiKey SaveState sponge-bob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(
    _context: TapiKeyContext,
    _params: any,
    body: any,
    state: any,
    callback: TSaveStateCallback
  ): void {
    const { item: { name } } = body
    const { items = [] }: any = state
    const newItem: any = { name }

    callback({
      state: {
        ...state,
        items: [...items, newItem]
      },
      data: [...items, newItem]
    })
  }
  ",
  "authType": "apiKey",
  "callbackType": "TSaveStateCallback",
  "fileName": "sponge-bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge-bob",
  "intentType": "SaveState",
}
`;

exports[`Generate command get intents variables apiKey SaveState spongeBob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(
    _context: TapiKeyContext,
    _params: any,
    body: any,
    state: any,
    callback: TSaveStateCallback
  ): void {
    const { item: { name } } = body
    const { items = [] }: any = state
    const newItem: any = { name }

    callback({
      state: {
        ...state,
        items: [...items, newItem]
      },
      data: [...items, newItem]
    })
  }
  ",
  "authType": "apiKey",
  "callbackType": "TSaveStateCallback",
  "fileName": "spongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "spongeBob",
  "intentType": "SaveState",
}
`;

exports[`Generate command get intents variables apiKey SaveState spongebob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(
    _context: TapiKeyContext,
    _params: any,
    body: any,
    state: any,
    callback: TSaveStateCallback
  ): void {
    const { item: { name } } = body
    const { items = [] }: any = state
    const newItem: any = { name }

    callback({
      state: {
        ...state,
        items: [...items, newItem]
      },
      data: [...items, newItem]
    })
  }
  ",
  "authType": "apiKey",
  "callbackType": "TSaveStateCallback",
  "fileName": "spongebob",
  "intentClassName": "Spongebob",
  "intentName": "spongebob",
  "intentType": "SaveState",
}
`;

exports[`Generate command get intents variables basicAuth FetchData SpongeBob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(context: TbasicAuthContext, params: any, body: any, callback: TFetchDataCallback) {
    //... your code goes here
    // use the client defined in client.ts to fetch real object like that:
    // Client(
    //   context.authAccess.username,
    //   context.authAccess.password
    // ).get('/people').then(({ data }) => {
    //     callback({ data })
    //   })
    //   .catch((error) => {
    //     callback({ error: error.toString() })
    //   })
    callback({ data: []})
  }
  ",
  "authType": "basicAuth",
  "callbackType": "TFetchDataCallback",
  "fileName": "SpongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "SpongeBob",
  "intentType": "FetchData",
}
`;

exports[`Generate command get intents variables basicAuth FetchData sponge_bob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(context: TbasicAuthContext, params: any, body: any, callback: TFetchDataCallback) {
    //... your code goes here
    // use the client defined in client.ts to fetch real object like that:
    // Client(
    //   context.authAccess.username,
    //   context.authAccess.password
    // ).get('/people').then(({ data }) => {
    //     callback({ data })
    //   })
    //   .catch((error) => {
    //     callback({ error: error.toString() })
    //   })
    callback({ data: []})
  }
  ",
  "authType": "basicAuth",
  "callbackType": "TFetchDataCallback",
  "fileName": "sponge_bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge_bob",
  "intentType": "FetchData",
}
`;

exports[`Generate command get intents variables basicAuth FetchData sponge-bob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(context: TbasicAuthContext, params: any, body: any, callback: TFetchDataCallback) {
    //... your code goes here
    // use the client defined in client.ts to fetch real object like that:
    // Client(
    //   context.authAccess.username,
    //   context.authAccess.password
    // ).get('/people').then(({ data }) => {
    //     callback({ data })
    //   })
    //   .catch((error) => {
    //     callback({ error: error.toString() })
    //   })
    callback({ data: []})
  }
  ",
  "authType": "basicAuth",
  "callbackType": "TFetchDataCallback",
  "fileName": "sponge-bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge-bob",
  "intentType": "FetchData",
}
`;

exports[`Generate command get intents variables basicAuth FetchData spongeBob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(context: TbasicAuthContext, params: any, body: any, callback: TFetchDataCallback) {
    //... your code goes here
    // use the client defined in client.ts to fetch real object like that:
    // Client(
    //   context.authAccess.username,
    //   context.authAccess.password
    // ).get('/people').then(({ data }) => {
    //     callback({ data })
    //   })
    //   .catch((error) => {
    //     callback({ error: error.toString() })
    //   })
    callback({ data: []})
  }
  ",
  "authType": "basicAuth",
  "callbackType": "TFetchDataCallback",
  "fileName": "spongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "spongeBob",
  "intentType": "FetchData",
}
`;

exports[`Generate command get intents variables basicAuth FetchData spongebob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(context: TbasicAuthContext, params: any, body: any, callback: TFetchDataCallback) {
    //... your code goes here
    // use the client defined in client.ts to fetch real object like that:
    // Client(
    //   context.authAccess.username,
    //   context.authAccess.password
    // ).get('/people').then(({ data }) => {
    //     callback({ data })
    //   })
    //   .catch((error) => {
    //     callback({ error: error.toString() })
    //   })
    callback({ data: []})
  }
  ",
  "authType": "basicAuth",
  "callbackType": "TFetchDataCallback",
  "fileName": "spongebob",
  "intentClassName": "Spongebob",
  "intentName": "spongebob",
  "intentType": "FetchData",
}
`;

exports[`Generate command get intents variables basicAuth Intent SpongeBob formats variables correctly 1`] = `
Object {
  "actionExample": undefined,
  "authType": "basicAuth",
  "callbackType": "TIntentCallback",
  "fileName": "SpongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "SpongeBob",
  "intentType": "Intent",
}
`;

exports[`Generate command get intents variables basicAuth Intent sponge_bob formats variables correctly 1`] = `
Object {
  "actionExample": undefined,
  "authType": "basicAuth",
  "callbackType": "TIntentCallback",
  "fileName": "sponge_bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge_bob",
  "intentType": "Intent",
}
`;

exports[`Generate command get intents variables basicAuth Intent sponge-bob formats variables correctly 1`] = `
Object {
  "actionExample": undefined,
  "authType": "basicAuth",
  "callbackType": "TIntentCallback",
  "fileName": "sponge-bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge-bob",
  "intentType": "Intent",
}
`;

exports[`Generate command get intents variables basicAuth Intent spongeBob formats variables correctly 1`] = `
Object {
  "actionExample": undefined,
  "authType": "basicAuth",
  "callbackType": "TIntentCallback",
  "fileName": "spongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "spongeBob",
  "intentType": "Intent",
}
`;

exports[`Generate command get intents variables basicAuth Intent spongebob formats variables correctly 1`] = `
Object {
  "actionExample": undefined,
  "authType": "basicAuth",
  "callbackType": "TIntentCallback",
  "fileName": "spongebob",
  "intentClassName": "Spongebob",
  "intentName": "spongebob",
  "intentType": "Intent",
}
`;

exports[`Generate command get intents variables basicAuth RetrieveState SpongeBob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(_context: TbasicAuthContext, _params: any, state, callback: TRetrieveStateCallback) {
    callback({ data: state })
  }
  ",
  "authType": "basicAuth",
  "callbackType": "TRetrieveStateCallback",
  "fileName": "SpongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "SpongeBob",
  "intentType": "RetrieveState",
}
`;

exports[`Generate command get intents variables basicAuth RetrieveState sponge_bob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(_context: TbasicAuthContext, _params: any, state, callback: TRetrieveStateCallback) {
    callback({ data: state })
  }
  ",
  "authType": "basicAuth",
  "callbackType": "TRetrieveStateCallback",
  "fileName": "sponge_bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge_bob",
  "intentType": "RetrieveState",
}
`;

exports[`Generate command get intents variables basicAuth RetrieveState sponge-bob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(_context: TbasicAuthContext, _params: any, state, callback: TRetrieveStateCallback) {
    callback({ data: state })
  }
  ",
  "authType": "basicAuth",
  "callbackType": "TRetrieveStateCallback",
  "fileName": "sponge-bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge-bob",
  "intentType": "RetrieveState",
}
`;

exports[`Generate command get intents variables basicAuth RetrieveState spongeBob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(_context: TbasicAuthContext, _params: any, state, callback: TRetrieveStateCallback) {
    callback({ data: state })
  }
  ",
  "authType": "basicAuth",
  "callbackType": "TRetrieveStateCallback",
  "fileName": "spongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "spongeBob",
  "intentType": "RetrieveState",
}
`;

exports[`Generate command get intents variables basicAuth RetrieveState spongebob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(_context: TbasicAuthContext, _params: any, state, callback: TRetrieveStateCallback) {
    callback({ data: state })
  }
  ",
  "authType": "basicAuth",
  "callbackType": "TRetrieveStateCallback",
  "fileName": "spongebob",
  "intentClassName": "Spongebob",
  "intentName": "spongebob",
  "intentType": "RetrieveState",
}
`;

exports[`Generate command get intents variables basicAuth SaveState SpongeBob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(
    _context: TbasicAuthContext,
    _params: any,
    body: any,
    state: any,
    callback: TSaveStateCallback
  ): void {
    const { item: { name } } = body
    const { items = [] }: any = state
    const newItem: any = { name }

    callback({
      state: {
        ...state,
        items: [...items, newItem]
      },
      data: [...items, newItem]
    })
  }
  ",
  "authType": "basicAuth",
  "callbackType": "TSaveStateCallback",
  "fileName": "SpongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "SpongeBob",
  "intentType": "SaveState",
}
`;

exports[`Generate command get intents variables basicAuth SaveState sponge_bob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(
    _context: TbasicAuthContext,
    _params: any,
    body: any,
    state: any,
    callback: TSaveStateCallback
  ): void {
    const { item: { name } } = body
    const { items = [] }: any = state
    const newItem: any = { name }

    callback({
      state: {
        ...state,
        items: [...items, newItem]
      },
      data: [...items, newItem]
    })
  }
  ",
  "authType": "basicAuth",
  "callbackType": "TSaveStateCallback",
  "fileName": "sponge_bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge_bob",
  "intentType": "SaveState",
}
`;

exports[`Generate command get intents variables basicAuth SaveState sponge-bob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(
    _context: TbasicAuthContext,
    _params: any,
    body: any,
    state: any,
    callback: TSaveStateCallback
  ): void {
    const { item: { name } } = body
    const { items = [] }: any = state
    const newItem: any = { name }

    callback({
      state: {
        ...state,
        items: [...items, newItem]
      },
      data: [...items, newItem]
    })
  }
  ",
  "authType": "basicAuth",
  "callbackType": "TSaveStateCallback",
  "fileName": "sponge-bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge-bob",
  "intentType": "SaveState",
}
`;

exports[`Generate command get intents variables basicAuth SaveState spongeBob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(
    _context: TbasicAuthContext,
    _params: any,
    body: any,
    state: any,
    callback: TSaveStateCallback
  ): void {
    const { item: { name } } = body
    const { items = [] }: any = state
    const newItem: any = { name }

    callback({
      state: {
        ...state,
        items: [...items, newItem]
      },
      data: [...items, newItem]
    })
  }
  ",
  "authType": "basicAuth",
  "callbackType": "TSaveStateCallback",
  "fileName": "spongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "spongeBob",
  "intentType": "SaveState",
}
`;

exports[`Generate command get intents variables basicAuth SaveState spongebob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(
    _context: TbasicAuthContext,
    _params: any,
    body: any,
    state: any,
    callback: TSaveStateCallback
  ): void {
    const { item: { name } } = body
    const { items = [] }: any = state
    const newItem: any = { name }

    callback({
      state: {
        ...state,
        items: [...items, newItem]
      },
      data: [...items, newItem]
    })
  }
  ",
  "authType": "basicAuth",
  "callbackType": "TSaveStateCallback",
  "fileName": "spongebob",
  "intentClassName": "Spongebob",
  "intentName": "spongebob",
  "intentType": "SaveState",
}
`;

exports[`Generate command get intents variables noAuth FetchData SpongeBob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(context: TnoAuthContext, params: any, body: any, callback: TFetchDataCallback) {
    //... your code goes here
    callback({ data: []})
  }",
  "authType": "noAuth",
  "callbackType": "TFetchDataCallback",
  "fileName": "SpongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "SpongeBob",
  "intentType": "FetchData",
}
`;

exports[`Generate command get intents variables noAuth FetchData sponge_bob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(context: TnoAuthContext, params: any, body: any, callback: TFetchDataCallback) {
    //... your code goes here
    callback({ data: []})
  }",
  "authType": "noAuth",
  "callbackType": "TFetchDataCallback",
  "fileName": "sponge_bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge_bob",
  "intentType": "FetchData",
}
`;

exports[`Generate command get intents variables noAuth FetchData sponge-bob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(context: TnoAuthContext, params: any, body: any, callback: TFetchDataCallback) {
    //... your code goes here
    callback({ data: []})
  }",
  "authType": "noAuth",
  "callbackType": "TFetchDataCallback",
  "fileName": "sponge-bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge-bob",
  "intentType": "FetchData",
}
`;

exports[`Generate command get intents variables noAuth FetchData spongeBob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(context: TnoAuthContext, params: any, body: any, callback: TFetchDataCallback) {
    //... your code goes here
    callback({ data: []})
  }",
  "authType": "noAuth",
  "callbackType": "TFetchDataCallback",
  "fileName": "spongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "spongeBob",
  "intentType": "FetchData",
}
`;

exports[`Generate command get intents variables noAuth FetchData spongebob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(context: TnoAuthContext, params: any, body: any, callback: TFetchDataCallback) {
    //... your code goes here
    callback({ data: []})
  }",
  "authType": "noAuth",
  "callbackType": "TFetchDataCallback",
  "fileName": "spongebob",
  "intentClassName": "Spongebob",
  "intentName": "spongebob",
  "intentType": "FetchData",
}
`;

exports[`Generate command get intents variables noAuth Intent SpongeBob formats variables correctly 1`] = `
Object {
  "actionExample": undefined,
  "authType": "noAuth",
  "callbackType": "TIntentCallback",
  "fileName": "SpongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "SpongeBob",
  "intentType": "Intent",
}
`;

exports[`Generate command get intents variables noAuth Intent sponge_bob formats variables correctly 1`] = `
Object {
  "actionExample": undefined,
  "authType": "noAuth",
  "callbackType": "TIntentCallback",
  "fileName": "sponge_bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge_bob",
  "intentType": "Intent",
}
`;

exports[`Generate command get intents variables noAuth Intent sponge-bob formats variables correctly 1`] = `
Object {
  "actionExample": undefined,
  "authType": "noAuth",
  "callbackType": "TIntentCallback",
  "fileName": "sponge-bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge-bob",
  "intentType": "Intent",
}
`;

exports[`Generate command get intents variables noAuth Intent spongeBob formats variables correctly 1`] = `
Object {
  "actionExample": undefined,
  "authType": "noAuth",
  "callbackType": "TIntentCallback",
  "fileName": "spongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "spongeBob",
  "intentType": "Intent",
}
`;

exports[`Generate command get intents variables noAuth Intent spongebob formats variables correctly 1`] = `
Object {
  "actionExample": undefined,
  "authType": "noAuth",
  "callbackType": "TIntentCallback",
  "fileName": "spongebob",
  "intentClassName": "Spongebob",
  "intentName": "spongebob",
  "intentType": "Intent",
}
`;

exports[`Generate command get intents variables noAuth RetrieveState SpongeBob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(_context: TnoAuthContext, _params: any, state, callback: TRetrieveStateCallback) {
    callback({ data: state })
  }
  ",
  "authType": "noAuth",
  "callbackType": "TRetrieveStateCallback",
  "fileName": "SpongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "SpongeBob",
  "intentType": "RetrieveState",
}
`;

exports[`Generate command get intents variables noAuth RetrieveState sponge_bob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(_context: TnoAuthContext, _params: any, state, callback: TRetrieveStateCallback) {
    callback({ data: state })
  }
  ",
  "authType": "noAuth",
  "callbackType": "TRetrieveStateCallback",
  "fileName": "sponge_bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge_bob",
  "intentType": "RetrieveState",
}
`;

exports[`Generate command get intents variables noAuth RetrieveState sponge-bob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(_context: TnoAuthContext, _params: any, state, callback: TRetrieveStateCallback) {
    callback({ data: state })
  }
  ",
  "authType": "noAuth",
  "callbackType": "TRetrieveStateCallback",
  "fileName": "sponge-bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge-bob",
  "intentType": "RetrieveState",
}
`;

exports[`Generate command get intents variables noAuth RetrieveState spongeBob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(_context: TnoAuthContext, _params: any, state, callback: TRetrieveStateCallback) {
    callback({ data: state })
  }
  ",
  "authType": "noAuth",
  "callbackType": "TRetrieveStateCallback",
  "fileName": "spongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "spongeBob",
  "intentType": "RetrieveState",
}
`;

exports[`Generate command get intents variables noAuth RetrieveState spongebob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(_context: TnoAuthContext, _params: any, state, callback: TRetrieveStateCallback) {
    callback({ data: state })
  }
  ",
  "authType": "noAuth",
  "callbackType": "TRetrieveStateCallback",
  "fileName": "spongebob",
  "intentClassName": "Spongebob",
  "intentName": "spongebob",
  "intentType": "RetrieveState",
}
`;

exports[`Generate command get intents variables noAuth SaveState SpongeBob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(
    _context: TnoAuthContext,
    _params: any,
    body: any,
    state: any,
    callback: TSaveStateCallback
  ): void {
    const { item: { name } } = body
    const { items = [] }: any = state
    const newItem: any = { name }

    callback({
      state: {
        ...state,
        items: [...items, newItem]
      },
      data: [...items, newItem]
    })
  }
  ",
  "authType": "noAuth",
  "callbackType": "TSaveStateCallback",
  "fileName": "SpongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "SpongeBob",
  "intentType": "SaveState",
}
`;

exports[`Generate command get intents variables noAuth SaveState sponge_bob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(
    _context: TnoAuthContext,
    _params: any,
    body: any,
    state: any,
    callback: TSaveStateCallback
  ): void {
    const { item: { name } } = body
    const { items = [] }: any = state
    const newItem: any = { name }

    callback({
      state: {
        ...state,
        items: [...items, newItem]
      },
      data: [...items, newItem]
    })
  }
  ",
  "authType": "noAuth",
  "callbackType": "TSaveStateCallback",
  "fileName": "sponge_bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge_bob",
  "intentType": "SaveState",
}
`;

exports[`Generate command get intents variables noAuth SaveState sponge-bob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(
    _context: TnoAuthContext,
    _params: any,
    body: any,
    state: any,
    callback: TSaveStateCallback
  ): void {
    const { item: { name } } = body
    const { items = [] }: any = state
    const newItem: any = { name }

    callback({
      state: {
        ...state,
        items: [...items, newItem]
      },
      data: [...items, newItem]
    })
  }
  ",
  "authType": "noAuth",
  "callbackType": "TSaveStateCallback",
  "fileName": "sponge-bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge-bob",
  "intentType": "SaveState",
}
`;

exports[`Generate command get intents variables noAuth SaveState spongeBob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(
    _context: TnoAuthContext,
    _params: any,
    body: any,
    state: any,
    callback: TSaveStateCallback
  ): void {
    const { item: { name } } = body
    const { items = [] }: any = state
    const newItem: any = { name }

    callback({
      state: {
        ...state,
        items: [...items, newItem]
      },
      data: [...items, newItem]
    })
  }
  ",
  "authType": "noAuth",
  "callbackType": "TSaveStateCallback",
  "fileName": "spongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "spongeBob",
  "intentType": "SaveState",
}
`;

exports[`Generate command get intents variables noAuth SaveState spongebob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(
    _context: TnoAuthContext,
    _params: any,
    body: any,
    state: any,
    callback: TSaveStateCallback
  ): void {
    const { item: { name } } = body
    const { items = [] }: any = state
    const newItem: any = { name }

    callback({
      state: {
        ...state,
        items: [...items, newItem]
      },
      data: [...items, newItem]
    })
  }
  ",
  "authType": "noAuth",
  "callbackType": "TSaveStateCallback",
  "fileName": "spongebob",
  "intentClassName": "Spongebob",
  "intentName": "spongebob",
  "intentType": "SaveState",
}
`;

exports[`Generate command get intents variables oauth2 FetchData SpongeBob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(context: Toauth2Context, params: any, body: any, callback: TFetchDataCallback) {
    //... your code goes here
    // use the client defined in client.ts to fetch real object like that:
    // Client(context.authAccess.accessToken).get('/people').then(({ data }) => {
    //     callback({ data })
    //   })
    //   .catch((error) => {
    //     callback({ error: error.toString() })
    //   })
    callback({ data: []})
  }",
  "authType": "oauth2",
  "callbackType": "TFetchDataCallback",
  "fileName": "SpongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "SpongeBob",
  "intentType": "FetchData",
}
`;

exports[`Generate command get intents variables oauth2 FetchData sponge_bob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(context: Toauth2Context, params: any, body: any, callback: TFetchDataCallback) {
    //... your code goes here
    // use the client defined in client.ts to fetch real object like that:
    // Client(context.authAccess.accessToken).get('/people').then(({ data }) => {
    //     callback({ data })
    //   })
    //   .catch((error) => {
    //     callback({ error: error.toString() })
    //   })
    callback({ data: []})
  }",
  "authType": "oauth2",
  "callbackType": "TFetchDataCallback",
  "fileName": "sponge_bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge_bob",
  "intentType": "FetchData",
}
`;

exports[`Generate command get intents variables oauth2 FetchData sponge-bob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(context: Toauth2Context, params: any, body: any, callback: TFetchDataCallback) {
    //... your code goes here
    // use the client defined in client.ts to fetch real object like that:
    // Client(context.authAccess.accessToken).get('/people').then(({ data }) => {
    //     callback({ data })
    //   })
    //   .catch((error) => {
    //     callback({ error: error.toString() })
    //   })
    callback({ data: []})
  }",
  "authType": "oauth2",
  "callbackType": "TFetchDataCallback",
  "fileName": "sponge-bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge-bob",
  "intentType": "FetchData",
}
`;

exports[`Generate command get intents variables oauth2 FetchData spongeBob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(context: Toauth2Context, params: any, body: any, callback: TFetchDataCallback) {
    //... your code goes here
    // use the client defined in client.ts to fetch real object like that:
    // Client(context.authAccess.accessToken).get('/people').then(({ data }) => {
    //     callback({ data })
    //   })
    //   .catch((error) => {
    //     callback({ error: error.toString() })
    //   })
    callback({ data: []})
  }",
  "authType": "oauth2",
  "callbackType": "TFetchDataCallback",
  "fileName": "spongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "spongeBob",
  "intentType": "FetchData",
}
`;

exports[`Generate command get intents variables oauth2 FetchData spongebob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(context: Toauth2Context, params: any, body: any, callback: TFetchDataCallback) {
    //... your code goes here
    // use the client defined in client.ts to fetch real object like that:
    // Client(context.authAccess.accessToken).get('/people').then(({ data }) => {
    //     callback({ data })
    //   })
    //   .catch((error) => {
    //     callback({ error: error.toString() })
    //   })
    callback({ data: []})
  }",
  "authType": "oauth2",
  "callbackType": "TFetchDataCallback",
  "fileName": "spongebob",
  "intentClassName": "Spongebob",
  "intentName": "spongebob",
  "intentType": "FetchData",
}
`;

exports[`Generate command get intents variables oauth2 Intent SpongeBob formats variables correctly 1`] = `
Object {
  "actionExample": undefined,
  "authType": "oauth2",
  "callbackType": "TIntentCallback",
  "fileName": "SpongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "SpongeBob",
  "intentType": "Intent",
}
`;

exports[`Generate command get intents variables oauth2 Intent sponge_bob formats variables correctly 1`] = `
Object {
  "actionExample": undefined,
  "authType": "oauth2",
  "callbackType": "TIntentCallback",
  "fileName": "sponge_bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge_bob",
  "intentType": "Intent",
}
`;

exports[`Generate command get intents variables oauth2 Intent sponge-bob formats variables correctly 1`] = `
Object {
  "actionExample": undefined,
  "authType": "oauth2",
  "callbackType": "TIntentCallback",
  "fileName": "sponge-bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge-bob",
  "intentType": "Intent",
}
`;

exports[`Generate command get intents variables oauth2 Intent spongeBob formats variables correctly 1`] = `
Object {
  "actionExample": undefined,
  "authType": "oauth2",
  "callbackType": "TIntentCallback",
  "fileName": "spongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "spongeBob",
  "intentType": "Intent",
}
`;

exports[`Generate command get intents variables oauth2 Intent spongebob formats variables correctly 1`] = `
Object {
  "actionExample": undefined,
  "authType": "oauth2",
  "callbackType": "TIntentCallback",
  "fileName": "spongebob",
  "intentClassName": "Spongebob",
  "intentName": "spongebob",
  "intentType": "Intent",
}
`;

exports[`Generate command get intents variables oauth2 RetrieveState SpongeBob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(_context: Toauth2Context, _params: any, state, callback: TRetrieveStateCallback) {
    callback({ data: state })
  }
  ",
  "authType": "oauth2",
  "callbackType": "TRetrieveStateCallback",
  "fileName": "SpongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "SpongeBob",
  "intentType": "RetrieveState",
}
`;

exports[`Generate command get intents variables oauth2 RetrieveState sponge_bob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(_context: Toauth2Context, _params: any, state, callback: TRetrieveStateCallback) {
    callback({ data: state })
  }
  ",
  "authType": "oauth2",
  "callbackType": "TRetrieveStateCallback",
  "fileName": "sponge_bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge_bob",
  "intentType": "RetrieveState",
}
`;

exports[`Generate command get intents variables oauth2 RetrieveState sponge-bob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(_context: Toauth2Context, _params: any, state, callback: TRetrieveStateCallback) {
    callback({ data: state })
  }
  ",
  "authType": "oauth2",
  "callbackType": "TRetrieveStateCallback",
  "fileName": "sponge-bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge-bob",
  "intentType": "RetrieveState",
}
`;

exports[`Generate command get intents variables oauth2 RetrieveState spongeBob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(_context: Toauth2Context, _params: any, state, callback: TRetrieveStateCallback) {
    callback({ data: state })
  }
  ",
  "authType": "oauth2",
  "callbackType": "TRetrieveStateCallback",
  "fileName": "spongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "spongeBob",
  "intentType": "RetrieveState",
}
`;

exports[`Generate command get intents variables oauth2 RetrieveState spongebob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(_context: Toauth2Context, _params: any, state, callback: TRetrieveStateCallback) {
    callback({ data: state })
  }
  ",
  "authType": "oauth2",
  "callbackType": "TRetrieveStateCallback",
  "fileName": "spongebob",
  "intentClassName": "Spongebob",
  "intentName": "spongebob",
  "intentType": "RetrieveState",
}
`;

exports[`Generate command get intents variables oauth2 SaveState SpongeBob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(
    _context: Toauth2Context,
    _params: any,
    body: any,
    state: any,
    callback: TSaveStateCallback
  ): void {
    const { item: { name } } = body
    const { items = [] }: any = state
    const newItem: any = { name }

    callback({
      state: {
        ...state,
        items: [...items, newItem]
      },
      data: [...items, newItem]
    })
  }
  ",
  "authType": "oauth2",
  "callbackType": "TSaveStateCallback",
  "fileName": "SpongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "SpongeBob",
  "intentType": "SaveState",
}
`;

exports[`Generate command get intents variables oauth2 SaveState sponge_bob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(
    _context: Toauth2Context,
    _params: any,
    body: any,
    state: any,
    callback: TSaveStateCallback
  ): void {
    const { item: { name } } = body
    const { items = [] }: any = state
    const newItem: any = { name }

    callback({
      state: {
        ...state,
        items: [...items, newItem]
      },
      data: [...items, newItem]
    })
  }
  ",
  "authType": "oauth2",
  "callbackType": "TSaveStateCallback",
  "fileName": "sponge_bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge_bob",
  "intentType": "SaveState",
}
`;

exports[`Generate command get intents variables oauth2 SaveState sponge-bob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(
    _context: Toauth2Context,
    _params: any,
    body: any,
    state: any,
    callback: TSaveStateCallback
  ): void {
    const { item: { name } } = body
    const { items = [] }: any = state
    const newItem: any = { name }

    callback({
      state: {
        ...state,
        items: [...items, newItem]
      },
      data: [...items, newItem]
    })
  }
  ",
  "authType": "oauth2",
  "callbackType": "TSaveStateCallback",
  "fileName": "sponge-bob",
  "intentClassName": "SpongeBob",
  "intentName": "sponge-bob",
  "intentType": "SaveState",
}
`;

exports[`Generate command get intents variables oauth2 SaveState spongeBob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(
    _context: Toauth2Context,
    _params: any,
    body: any,
    state: any,
    callback: TSaveStateCallback
  ): void {
    const { item: { name } } = body
    const { items = [] }: any = state
    const newItem: any = { name }

    callback({
      state: {
        ...state,
        items: [...items, newItem]
      },
      data: [...items, newItem]
    })
  }
  ",
  "authType": "oauth2",
  "callbackType": "TSaveStateCallback",
  "fileName": "spongeBob",
  "intentClassName": "SpongeBob",
  "intentName": "spongeBob",
  "intentType": "SaveState",
}
`;

exports[`Generate command get intents variables oauth2 SaveState spongebob formats variables correctly 1`] = `
Object {
  "actionExample": "
  static action(
    _context: Toauth2Context,
    _params: any,
    body: any,
    state: any,
    callback: TSaveStateCallback
  ): void {
    const { item: { name } } = body
    const { items = [] }: any = state
    const newItem: any = { name }

    callback({
      state: {
        ...state,
        items: [...items, newItem]
      },
      data: [...items, newItem]
    })
  }
  ",
  "authType": "oauth2",
  "callbackType": "TSaveStateCallback",
  "fileName": "spongebob",
  "intentClassName": "Spongebob",
  "intentName": "spongebob",
  "intentType": "SaveState",
}
`;
